--- a/locales/es.json
+++ b/locales/es.json
@@ -3,6 +3,8 @@
     "Could you give me a brief description of the item? (Ex: Wardrobe)": "¿Podría darme una breve descripción del artículo? (Ej: Armario)",
     "{{name}}, {{title}} with status \"{{description}}\" in {{date}} at {{time}} in the city of {{city}}/{{state}}": "{{name}}, {{title}} con status \"{{description}}\" en {{date}} a las {{time}} en la ciudad de {{city}}/{{state}}",
     "{{name}} with status \"{{description}}\" in the city of {{city}}/{{state}}": "{{name}} con status \"{{description}}\" en la ciudad de {{city}}/{{state}}",
-    "Tracking objects at the post office": "Seguimiento de objetos en los correos",
-    "Trace objects posted at the post office and be alerted to changes in posting history": "Rastree objetos enviados en los correos y sea alertado de cambios en el historial de la entrada"
+    "Tracking objects on Correios": "Seguimiento de objetos en los Correios",
+    "Be informed about every move of your order and be aware of possible delivery problems.": "Se informa sobre cada movimiento de su pedido y esté atento a los posibles problemas en la entrega.",
+    "Invalid tracking code": "Código de seguimiento inválido",
+    "Object not found in the Correios database": "Objeto no encontrado en la base de datos Correios"
 }
