--- a/locales/pt_BR.json
+++ b/locales/pt_BR.json
@@ -3,6 +3,8 @@
     "Could you give me a brief description of the item? (Ex: Wardrobe)": "Você poderia me dar uma breve descrição do item? (Ex: Guarda-Roupa)",
     "{{name}}, {{title}} with status \"{{description}}\" in {{date}} at {{time}} in the city of {{city}}/{{state}}": "{{name}}, {{title}} com status \"{{description}}\" em {{date}} às {{time}} na cidade de {{city}}/{{state}}",
     "{{name}} with status \"{{description}}\" in the city of {{city}}/{{state}}": "{{name}} com status \"{{description}}\" na cidade de {{city}}/{{state}}",
-    "Tracking objects at the post office": "Rastreio de objetos nos correios",
-    "Trace objects posted at the post office and be alerted to changes in posting history": "Rastreie objetos postados nos correios e seja alertado de mudanças no histórico da postagem"
+    "Tracking objects on Correios": "Rastreio de objetos nos Correios",
+    "Be informed about every move of your order and be aware of possible delivery problems.": "Seja informado sobre cada movimentação da sua encomenda e fique atento à possíveis problemas na entrega.",
+    "Invalid tracking code": "Código de rastreamento inválido",
+    "Object not found in the Correios database": "Objeto não encontrado na base de dados dos Correios"
 }
